--- a/src/app/main/components/raffle/form-raffle/form-raffle.component.html
+++ b/src/app/main/components/raffle/form-raffle/form-raffle.component.html
@@ -40,7 +40,7 @@
 				</div>
                 <div class="field col-12 md:col-6 py-0">
 					<label htmlFor="end_date">Dt. Fim</label>
-					<p-calendar id="end_date" type="end_date" [maxDate]="maxBirthDate" formControlName="end_date" inputId="icon" [showIcon]="true" dateFormat="dd/mm/yy" required [ngClass]="{'ng-invalid ng-dirty' : end_date.invalid && (end_date.dirty || end_date.touched)}"></p-calendar>
+					<p-calendar id="end_date" type="end_date" [maxDate]="maxBirthDate" formControlName="end_date" inputId="icon" [showIcon]="true" dateFormat="dd/mm/yy" [ngClass]="{'ng-invalid ng-dirty' : end_date.invalid && (end_date.dirty || end_date.touched)}"></p-calendar>
 					<div *ngIf="end_date.invalid && (end_date.dirty || end_date.touched)">
 						<small class="ng-dirty ng-invalid" *ngIf="end_date.errors?.['required']">Este campo é obrigatório.</small>
 					</div>
