feat: Adicionando dashboard de recebimentos e top participantes na home

--- a/src/app/main/components/dashboard/dashboard.component.html
+++ b/src/app/main/components/dashboard/dashboard.component.html
@@ -51,6 +51,18 @@
             </div>
         </div>
     </div>
+    <div class="col-12 xl:col-6">
+        <div class="card flex flex-column align-items-center">
+            <h5 class="text-left w-full">Recebimentos e pendências</h5>
+            <p-chart type="doughnut" [data]="profitChartData" [options]="profitChartOptions"></p-chart>
+        </div>
+    </div>
+    <div class="col-12 xl:col-6">
+        <div class="card">
+            <h5>Top participantes</h5>
+            <p-chart type="bar" [data]="topParticipantsChartData" [options]="topParticipantsChartOptions"></p-chart>
+        </div>
+    </div>
 </div>
 <ng-template #loagingSkeleton>
     <div class="grid">
@@ -65,6 +77,12 @@
         </div>
         <div class="col-12 lg:col-6 xl:col-3">
             <p-skeleton height="123px" width="100%"></p-skeleton>
+        </div>
+        <div class="col-12 xl:col-6">
+            <p-skeleton height="393px" width="100%"></p-skeleton>
+        </div>
+        <div class="col-12 xl:col-6">
+            <p-skeleton height="440px" width="100%"></p-skeleton>
         </div>
     </div>
 </ng-template>
