--- a/src/app/main/components/ticket/form-ticket/form-ticket.component.html
+++ b/src/app/main/components/ticket/form-ticket/form-ticket.component.html
@@ -5,7 +5,7 @@
                 <h4>Bilhete</h4>
 				<button pButton pRipple type="button" icon="pi pi-arrow-left" class="p-button-rounded p-button-secondary p-button-text p-0 w-2rem h-2rem" (click)="backPage()"></button>
 			</div>
-            <div class="p-fluid p-formgrid grid mt-1 animation-duration-600 fadein" [formGroup]="formGroup" *ngIf="!isLoading; else loagingSkeleton">
+            <div class="p-fluid p-formgrid grid mt-1 animation-duration-600 fadein" [formGroup]="formGroup" *ngIf="!isLoading && !isLoadingParticipants && !isLoadingRaffles; else loagingSkeleton">
                 <div class="field col-12 md:col-6 py-0">
 					<label htmlFor="raffle_id">Rifa<span class="text-red-500 font-bold">*</span></label>
 					<p-dropdown [options]="raffles" [loading]="isLoadingRaffles" [showClear]="true" optionLabel="name" [filter]="true" filterBy="name" optionValue="id" id="raffle_id" formControlName="raffle_id" [ngClass]="{'ng-invalid ng-dirty' : raffle_id.invalid && (raffle_id.dirty || raffle_id.touched)}"></p-dropdown>
